# framework.connectivity.data-router

./: CMakeLists.txt  data-router.manifest  data-router.rule  data-router.service  project.config  serial-client-test.manifest
include/: dr-common.h  dr-main.h  dr-modem.h  dr-noti-handler.h  dr-parser.h  dr-usb.h  dr-util.h
packaging/: data-router.spec
src/: dr-common.c  dr-ipc.c  dr-main.c  dr-noti-handler.c  dr-parser.c  dr-usb.c  dr-util.c
test/: CMakeLists.txt  serial_client.c  serial_client.h
